Revert to original logo alignment. Fixes didn't work on mobile.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -149,7 +149,7 @@ p {
 
     .wrapper::after{
         background-color: $color-header;
-        margin-left: $header-height - 1px;
+        margin-left: $header-height;
         width: 100vw;
         top: $header-height * 0.235;
         height: $header-height * 0.68;
@@ -157,7 +157,7 @@ p {
         position: absolute;
         z-index: -1;
         content: " ";
-        box-shadow: 1px 3px 0px 0px hsla(0, 10, 0, 0.15);
+        box-shadow: 0px 3px 0px 0px hsla(0, 10, 0, 0.15);
     }
 
     .wrapper {
